updates to separate and install.packages

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -225,11 +225,16 @@ de_census_data_clean <- de_census_data %>%
              sep = ",") %>%
     separate(col = Census_Tract, into = c("Census", "Tract", "Census_Tract_Number"),
              sep = " ") 
+```
 
-# Let's look at the above code step by step using the 'grammar'
+## Using the grammar
+
+Let's look at the above code step by step
+
+```{r}
 de_census_data %>% # take the data, and then
     separate(col = NAME, into = c("Census_Tract", "County", "State"), 
-             sep = ",")
+             sep = ",") # separate by ','
 ```
 
 ##
@@ -239,7 +244,7 @@ de_census_data %>% # take the data, and then
     separate(col = NAME, into = c("Census_Tract", "County", "State"), 
              sep = ",") %>% # separate, and then
     separate(col = Census_Tract, into = c(NA, NA, "Census_Tract_Number"),
-             sep = " ") # separate out Number and then
+             sep = " ") # separate out Number
 # this result is assigned to de_census_data_clean using the assignment operator '<-'
 ```
 
